SigmaCodebackup3rdSep/objects/Time_Sheet__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <label>Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>Milestone__c</referenceTo>
        <relationshipLabel>Time Sheets</relationshipLabel>
        <relationshipName>Time_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Resource</label>
        <referenceTo>Project_Resource__c</referenceTo>
        <relationshipLabel>Time Sheets</relationshipLabel>
        <relationshipName>Time_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <label>Project Task</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipLabel>Time Sheets</relationshipLabel>
        <relationshipName>Project_Times</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project2__c</referenceTo>
        <relationshipLabel>Time Sheets</relationshipLabel>
        <relationshipName>Time_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Time Sheets</relationshipLabel>
        <relationshipName>Time_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipLabel>Time Sheets (Task)</relationshipLabel>
        <relationshipName>Time_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Effort__c</fullName>
        <label>Total Effort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Time Sheet</label>
    <nameField>
        <displayFormat>PT{0000}</displayFormat>
        <label>Time Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>